--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.9",
+    "ai": "^3.1.1",
     "bcrypt": "^5.1.1",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "openai": "^4.42.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.2",
