--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.9",
+    "@radix-ui/react-slot": "^1.0.2",
     "ai": "^3.1.1",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -20,6 +24,8 @@
     "react-dom": "^18",
     "react-email": "^2.1.2",
     "resend": "^3.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6"
   },
   "devDependencies": {
