--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.9",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "ai": "^3.1.1",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,10 +27,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.2",
+    "react-hook-form": "^7.51.4",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.6"
+    "usehooks-ts": "^3.1.0",
+    "zod": "^3.23.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
